# spider

./: Cargo.toml
spider_backend/: Cargo.toml
spider_backend/src/iter/skip_last/: tests.rs
spider_backend/src/model/: game.rs  point.rs
spider_backend/src/model/point/: tests.rs
spider_backend/src/model/rectilinear/: mod.rs  tests.rs
spider_backend/src/model/rectilinear/fractal_test_useful_resources/: fractal_string.txt  path_to_points.py
spider_backend/src/model/rectilinear/path/: mod.rs  tests.rs
spider_backend/src/model/rectilinear/polygon/: mod.rs  tests.rs
spider_backend/src/model/spider/: tests.rs
spider_gtk/: Cargo.toml
spider_gtk/src/gui/: draw.rs  mod.rs
src/: lib.rs  main.rs  model.rs
src/gui/: draw.rs  mod.rs  router.rs
src/iter/: mod.rs  remember.rs  skip_last.rs
src/iter/remember/: tests.rs
src/model/: field.rs  game.rs  mod.rs  point.rs  rectilinear.rs  snake.rs  spider.rs  tests.rs
src/model/field/: tests.rs
src/model/point/: tests.rs
src/model/rectilinear/: line.rs  tests.rs  tests_fractal_polygon_inside.rs
src/model/rectilinear/line/: tests.rs
src/model/spider/: tests.rs
