[package]
name = "spider_gtk"
version = "0.1.0"
authors = ["Daniel Becker <daniel.93.becker@gmail.com>"]
edition = "2018"

[lib]
name = "spider_core"
path = "src/lib.rs"

[[bin]]
name = "spider_gtk"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"

# GUI
glib-sys = "^0"
gobject-sys = "^0"
glib = "^0"
gio = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
gtk = "^0"
cairo-rs = "^0"
