[package]
name = "spider_gtk"
version = "0.1.0"
authors = ["Daniel Becker <daniel.93.becker@gmail.com>"]
edition = "2018"

[lib]
name = "spider_gtk"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spider_backend = { path = "../spider_backend" }
itertools = "0.9"
rand = "0.7.3"

# GUI
glib-sys = "^0"
gobject-sys = "^0"
glib = "^0"
gio = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
gtk = "^0"
cairo-rs = "^0"
